apps/base/thornus/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: thornus
  labels:
    pod-security.kubernetes.io/warn: baseline
    pod-security.kubernetes.io/audit: baseline
